samples/troubleshooting/invalid/R6.dita
<?xml version="1.0" encoding="UTF-8"?>
<troubleshooting>
  <title>T</title>
  <prolog/>
  <troublebody>
    <troubleSolution>
      <cause><title>C</title><p>Cause desc</p></cause>
      <remedy><title>R</title><steps-informal><p>Do this.</p></steps-informal></remedy>
    </troubleSolution>
    <condition><p>Condition text.</p></condition>
  </troublebody>
</troubleshooting>